# xiaoguanjia

./: PRD.md  README.md  Technical_Architecture.md
backend/: Cargo.toml  add_missing_fields.sql
backend/src/: main.rs  schema.rs
backend/src/models/: mod.rs
backend/src/routes/: admin.rs  auth.rs  categories.rs  items.rs  locations.rs  mod.rs
backend/src/utils/: db_init.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  Layout.tsx
frontend/src/pages/: Categories.tsx  Home.tsx  Items.tsx  Locations.tsx  Login.tsx  Register.tsx  Settings.tsx
frontend/src/store/: useAuthStore.ts
